--- a/src/lk/royal/hibernate/view/DashboardView.fxml
+++ b/src/lk/royal/hibernate/view/DashboardView.fxml
@@ -71,7 +71,7 @@
                                     </ImageView>
                                  </graphic>
                               </JFXButton>
-                              <TableView fx:id="tblStudent1" layoutX="33.0" layoutY="140.0" prefHeight="206.0" prefWidth="930.0" stylesheets="@../assests/style/newTableStyles.css">
+                              <TableView fx:id="tblStudentCWise" layoutX="33.0" layoutY="140.0" prefHeight="206.0" prefWidth="930.0" styleClass="cell" stylesheets="@../assests/style/newTableStyles.css">
                                  <columns>
                                     <TableColumn fx:id="colSID1" prefWidth="75.0" text="ID" />
                                     <TableColumn fx:id="colSName1" prefWidth="154.0" text="Name" />
@@ -331,33 +331,33 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="538.0" prefWidth="1127.0">
                      <children>
-                        <TableView fx:id="tblCourse" layoutX="448.0" layoutY="110.0" prefHeight="374.0" prefWidth="623.0" stylesheets="@../assests/style/newTableStyles.css">
+                        <TableView fx:id="tblCourse" layoutX="449.0" layoutY="104.0" prefHeight="374.0" prefWidth="617.0" stylesheets="@../assests/style/newTableStyles.css">
                           <columns>
-                            <TableColumn fx:id="colCID" prefWidth="75.0" text="ID" />
-                            <TableColumn fx:id="colCName" prefWidth="154.0" text="Name" />
-                              <TableColumn fx:id="colType" prefWidth="77.0" text="Type" />
-                              <TableColumn fx:id="colDurationC" prefWidth="107.0" text="Duration" />
-                              <TableColumn fx:id="colFeeC" prefWidth="101.0" text="Fee(Rs.)" />
-                              <TableColumn fx:id="colDeleteC" prefWidth="116.0" text="Delete" />
+                            <TableColumn fx:id="colCode" prefWidth="75.0" text="Code" />
+                            <TableColumn fx:id="colCName" prefWidth="141.0" text="Name" />
+                              <TableColumn fx:id="colType" prefWidth="82.0" text="Type" />
+                              <TableColumn fx:id="colDurationC" prefWidth="101.0" text="Duration" />
+                              <TableColumn fx:id="colFeeC" prefWidth="105.0" text="Fee(Rs.)" />
+                              <TableColumn fx:id="colDeleteC" prefWidth="107.0" text="Delete" />
                           </columns>
                         </TableView>
                         <Pane layoutX="11.0" layoutY="89.0" prefHeight="397.0" prefWidth="428.0" style="-fx-background-radius: 50; -fx-border-radius: 25; -fx-border-color: #c9c9c9;">
                            <children>
-                              <JFXTextField fx:id="txtDurationC" labelFloat="true" layoutX="26.0" layoutY="244.0" prefHeight="32.0" prefWidth="360.0" promptText="Duration">
+                              <JFXTextField fx:id="txtDurationC" labelFloat="true" layoutX="26.0" layoutY="244.0" prefHeight="32.0" prefWidth="207.0" promptText="Duration">
                                  <font>
                                     <Font name="Times New Roman" size="18.0" />
                                  </font>
                               </JFXTextField>
                               <Pane layoutX="135.0" layoutY="11.0" opacity="0.75" prefHeight="49.0" prefWidth="274.0" style="-fx-background-radius: 50; -fx-border-radius: 50; -fx-background-color: #cd84f1;">
                                  <children>
-                                    <Text layoutX="129.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course ID : ">
+                                    <Text layoutX="112.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course ID : ">
                                        <font>
                                           <Font name="Times New Roman Italic" size="18.0" />
                                        </font>
                                     </Text>
                                  </children>
                               </Pane>
-                              <Label fx:id="lblCIDC" layoutX="354.0" layoutY="13.0" prefHeight="45.0" prefWidth="70.0">
+                              <Label fx:id="lblCIDC" layoutX="338.0" layoutY="13.0" prefHeight="45.0" prefWidth="70.0">
                                  <font>
                                     <Font name="Times New Roman Bold Italic" size="18.0" />
                                  </font>
@@ -387,7 +387,7 @@
                                     <Font name="Times New Roman" size="18.0" />
                                  </font>
                               </Label>
-                              <JFXTextField fx:id="txtFeeC" labelFloat="true" layoutX="25.0" layoutY="322.0" prefHeight="32.0" prefWidth="365.0" promptText="Fee (Rs.)">
+                              <JFXTextField fx:id="txtFeeC" labelFloat="true" layoutX="25.0" layoutY="322.0" prefHeight="32.0" prefWidth="356.0" promptText="Fee (Rs.)">
                                  <font>
                                     <Font name="Times New Roman" size="18.0" />
                                  </font>
@@ -397,7 +397,7 @@
                                     <Font name="Times New Roman" size="18.0" />
                                  </font>
                               </JFXTextField>
-                              <JFXButton fx:id="btnNew" layoutX="382.0" layoutY="95.0" onAction="#btnNewOnAction" prefHeight="36.0" prefWidth="24.0" style="-fx-background-radius: 100; -fx-background-radius: 100;" text=" ">
+                              <JFXButton fx:id="btnNewCourse" layoutX="382.0" layoutY="95.0" onAction="#btnNewCourseOnAction" prefHeight="36.0" prefWidth="24.0" style="-fx-background-radius: 100; -fx-background-radius: 100;" text=" ">
                                  <graphic>
                                     <ImageView fitHeight="27.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -406,6 +406,7 @@
                                     </ImageView>
                                  </graphic>
                               </JFXButton>
+                              <JFXComboBox fx:id="cmbDurationType" editable="true" layoutX="255.0" layoutY="245.0" onAction="#cmbDurationTypeOnAction" prefHeight="32.0" prefWidth="126.0" visibleRowCount="4" />
                            </children>
                         </Pane>
                         <Text layoutX="386.0" layoutY="38.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Course Details" underline="true">
@@ -421,7 +422,7 @@
                               </LinearGradient>
                            </stroke>
                         </Text>
-                        <JFXButton fx:id="btnSaveC" buttonType="RAISED" layoutX="76.0" layoutY="505.0" onAction="#btnSaveCOnAction" prefHeight="35.0" prefWidth="94.0" style="-fx-background-color: #f7d794; -fx-border-radius: 50; -fx-background-radius: 50;" text="Save">
+                        <JFXButton fx:id="btnSaveC" buttonType="RAISED" layoutX="99.0" layoutY="505.0" onAction="#btnSaveCOnAction" prefHeight="35.0" prefWidth="94.0" style="-fx-background-color: #f7d794; -fx-border-radius: 50; -fx-background-radius: 50;" text="Save">
                            <ripplerFill>
                               <RadialGradient centerX="0.5227272727272727" centerY="0.5097087378640777" radius="0.9268292682926829">
                                  <stops>
@@ -435,7 +436,7 @@
                               <Font name="Times New Roman" size="19.0" />
                            </font>
                         </JFXButton>
-                        <JFXButton fx:id="btnUpdateC" buttonType="RAISED" layoutX="231.0" layoutY="506.0" onAction="#btnUpdateOnActionC" prefHeight="35.0" prefWidth="94.0" style="-fx-background-color: #487eb0; -fx-border-radius: 50; -fx-background-radius: 50;" text="Update" textFill="WHITE">
+                        <JFXButton fx:id="btnUpdateC" buttonType="RAISED" layoutX="240.0" layoutY="506.0" onAction="#btnUpdateOnActionC" prefHeight="35.0" prefWidth="94.0" style="-fx-background-color: #487eb0; -fx-border-radius: 50; -fx-background-radius: 50;" text="Update" textFill="WHITE">
                            <ripplerFill>
                               <RadialGradient centerX="0.5227272727272727" centerY="0.5097087378640777" radius="0.9268292682926829">
                                  <stops>
