--- a/src/lk/royal/hibernate/view/DashboardView.fxml
+++ b/src/lk/royal/hibernate/view/DashboardView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXCheckBox?>
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXDatePicker?>
 <?import com.jfoenix.controls.JFXRadioButton?>
@@ -552,17 +553,15 @@
                               </LinearGradient>
                            </stroke>
                         </Text>
-                        <TableView fx:id="tblStudent" layoutX="14.0" layoutY="89.0" prefHeight="259.0" prefWidth="1151.0" stylesheets="@../assests/style/newTableStyles.css">
+                        <TableView fx:id="tblStudent" layoutX="20.0" layoutY="89.0" prefHeight="259.0" prefWidth="1131.0" stylesheets="@../assests/style/newTableStyles.css">
                            <columns>
                               <TableColumn fx:id="colSID" prefWidth="75.0" text="ID" />
                               <TableColumn fx:id="colSName" prefWidth="129.99996948242188" text="Name" />
-                              <TableColumn fx:id="colAddress" prefWidth="182.0" text="Address" />
-                              <TableColumn fx:id="colContact" prefWidth="139.0" text="Contact No" />
-                              <TableColumn fx:id="colDOB" prefWidth="121.0" text="DOB" />
-                              <TableColumn fx:id="colGender" prefWidth="152.0" text="Gender" />
-                              <TableColumn fx:id="colregNo" prefWidth="119.0" text="Reg No" />
-                              <TableColumn fx:id="colCourse" prefWidth="108.0" text="Course" />
-                              <TableColumn fx:id="colDeleteS" prefWidth="119.0" text="Delete" />
+                              <TableColumn fx:id="colAddress" prefWidth="244.0" text="Address" />
+                              <TableColumn fx:id="colContact" prefWidth="159.0" text="Contact No" />
+                              <TableColumn fx:id="colDOB" prefWidth="174.0" text="DOB" />
+                              <TableColumn fx:id="colGender" prefWidth="154.0" text="Gender" />
+                              <TableColumn fx:id="colDeleteS" prefWidth="187.0" text="Delete" />
                            </columns>
                            <styleClass>
                               <String fx:value="cell" />
@@ -681,6 +680,11 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
+                        <JFXCheckBox fx:id="checkBoxSAll" layoutX="964.0" layoutY="364.0" onAction="#checkBoxSAllOnAction" prefHeight="21.0" prefWidth="173.0" text="Show All Students">
+                           <font>
+                              <Font name="Times New Roman" size="15.0" />
+                           </font>
+                        </JFXCheckBox>
                      </children></AnchorPane>
               </content>
                <graphic>
