--- a/src/lk/royal/hibernate/view/DashboardView.fxml
+++ b/src/lk/royal/hibernate/view/DashboardView.fxml
@@ -26,7 +26,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="812.0" prefWidth="1205.0" style="-fx-background-color: white; -fx-background-radius: 50; -fx-border-radius: 50;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.royal.hibernate.controller.DashboardViewController">
+<AnchorPane fx:id="root" prefHeight="812.0" prefWidth="1205.0" style="-fx-background-color: white; -fx-background-radius: 50; -fx-border-radius: 50;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.royal.hibernate.controller.DashboardViewController">
    <children>
       <TabPane fx:id="tabPane" layoutX="-30.0" layoutY="130.0" pickOnBounds="false" prefHeight="775.0" prefWidth="1369.0" side="LEFT" stylesheets="@../assests/style/style.css" tabClosingPolicy="UNAVAILABLE">
         <tabs>
