--- a/src/lk/royal/hibernate/view/LoginView.fxml
+++ b/src/lk/royal/hibernate/view/LoginView.fxml
@@ -14,14 +14,14 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="611.0" prefWidth="519.0" style="-fx-background-radius: 50; -fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.royal.hibernate.controller.LoginViewController">
+<AnchorPane fx:id="root" prefHeight="611.0" prefWidth="519.0" style="-fx-background-radius: 50; -fx-background-color: transparent; -fx-border-radius: 50;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.royal.hibernate.controller.LoginViewController">
    <children>
       <ImageView fx:id="imgLogo" fitHeight="192.0" fitWidth="311.0" layoutX="134.0" layoutY="20.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../assests/logo.png" />
          </image>
       </ImageView>
-      <Pane layoutX="21.0" layoutY="235.0" prefHeight="368.0" prefWidth="480.0" style="-fx-background-color: linear-gradient(to bottom, #040715, #060b24, #030e33, #000f41, #020e4f, #090d4e, #0e0d4d, #130c4c, #130e3d, #130f2e, #120f1f, #0e0e0e); -fx-background-radius: 50;">
+      <Pane layoutX="14.0" layoutY="235.0" prefHeight="368.0" prefWidth="489.0" style="-fx-background-color: linear-gradient(to bottom, #040715, #060b24, #030e33, #000f41, #020e4f, #090d4e, #0e0d4d, #130c4c, #130e3d, #130f2e, #120f1f, #0e0e0e); -fx-background-radius: 50;">
          <children>
             <JFXTextField fx:id="txtName" labelFloat="true" layoutX="96.0" layoutY="93.0" prefHeight="48.0" prefWidth="323.0" promptText="User Name" styleClass="jfxTextFieldFontColour" stylesheets="@../assests/style/style.css">
                <font>
@@ -99,7 +99,7 @@
                   <Image url="@../assests/key_100px.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="btnLogin" buttonType="RAISED" layoutX="170.0" layoutY="302.0" onAction="#btnLoginOnAction" prefHeight="41.0" prefWidth="126.0" style="-fx-border-color: white; -fx-border-radius: 50; -fx-background-radius: 50;" stylesheets="@../assests/style/style.css" text="Login" textFill="WHITE">
+            <JFXButton fx:id="btnLogin" buttonType="RAISED" layoutX="170.0" layoutY="302.0" onAction="#btnLoginOnAction" prefHeight="41.0" prefWidth="126.0" style="-fx-border-color: white; -fx-border-radius: 50; -fx-background-radius: 50;" stylesheets="@../assests/style/style.css" text="Login" textFill="#eeeeee">
                <ripplerFill>
                   <RadialGradient centerX="0.5" centerY="0.5" radius="0.5">
                      <stops>
